Presentable page with all explored frontend effects

--- a/styles/circleScroll.css
+++ b/styles/circleScroll.css
@@ -72,9 +72,8 @@ header {
 }
 
 .scroll-container {
-    margin-top: 385px;
     position: relative;
-    left: 650px;
+    top: 185px;
     height: 250vh;
 }
 
