--- a/pages/examples-2/header1.css
+++ b/pages/examples-2/header1.css
@@ -5,7 +5,7 @@
 }
 
 html {
-    scroll-behaviour: smooth;
+    scroll-behaviour: smooth !important;
 }
 
 body {
@@ -93,6 +93,7 @@ h1 {
     flex-direction: column;
     transform: transateX(-50%);
     text-decoration: none;
+    cursor: pointer;
 }
 
 .scroll-container p {
@@ -107,16 +108,16 @@ h1 {
     height: 20px;
     border-radius: 100%;
     box-shadow:
-    inset 0 0 25px #fff,
-    inset 10px 0 30px #ee82ee,
-    inset -10px 0 30px #0ff,
+    inset 0 0 10px #EE8134,
+    inset 10px 0 30px #FCC901,
+    inset -10px 0 30px #0074AF,
 
-    inset 10px 0 150px #ee82ee,
-    inset -10px 0 150px #0ff,
+    inset 10px 0 150px #FCC901,
+    inset -10px 0 150px #0074AF,
 
-    0 0 3px #fff,
-    -5px 0 30px #ee82ee,
-    5px 0 30px #0ff
+    0 0 3px #EE8134,
+    -5px 0 30px #FCC901,
+    5px 0 30px #0074AF
     ;
     animation: rotate 2s infinite;
 }
@@ -179,18 +180,16 @@ p {
 
 #fullNavbar, #hbNavbar {
     z-index: 10;
-    transition: all 1s ease-in-out;
+    transition: all .6s cubic-bezier(0,.77,.28,1.02);
 }
 
 .hidden {
     opacity: 0;
-    transform: transateX(-100%);
     transition: all 1s;
 }
 
 .show {
     opacity: 1;
-    transform: transateX(-100%);
 }
 
 ::selection {
@@ -230,4 +229,219 @@ p {
     width: 100%;
     z-index: 2;
     backdrop-filter:blur(50px) ;
+  }
+
+  @media only screen and (max-width: 1000px) {
+    nav {
+        position: fixed;
+        top: 0;
+        left: 0;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+        height: 140px;
+        padding: 0 100px;
+    }
+    
+    ul {
+        list-style: none;
+        display: flex;
+        gap: 30px;
+        font-family: 'Poppins';
+    }
+    
+    ul li {
+        opacity: .4;
+        cursor: pointer;
+        transition: all .3s ease-in-out;
+    }
+    
+    ul li:hover {
+        opacity: 1;
+    }
+    
+    ul li:first-child {
+        opacity: 1;
+    }
+    
+    ul li:first-child::after {
+        content: "";
+        display: block;
+        margin: auto;
+        border-radius: 100%;
+        width: 5px;
+        height: 5px;
+        background: linear-gradient(61.71deg, #E3312D -11.38%, #E95F32 2.66%, #F18F34 24.36%, #FDC800 69.03%, #FDCB03 84.34%, #FDD70E 99.66%, #FEE921 113.7%, #FFEF26 116.25%);
+    }
+    
+    header {
+        position: relative;
+        padding-top: 300px;
+        height: 100vh;
+        z-index: 10;
+    }
+    
+    .background-color {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(50.35deg, rgba(8, 52, 46, .7) 30.14%, rgba(9, 167, 149, .7) 77.9%);
+        z-index: -1;
+    }
+    
+    h1 {
+        font-size: 35px;
+        line-height: 40px;
+    }
+    
+    .scroll-container {
+        position: absolute;
+        left: 50%;
+        bottom: 70px;
+        display: flex;
+        gap: 15px;
+        flex-direction: column;
+        transform: transateX(-50%);
+        text-decoration: none;
+        cursor: pointer;
+    }
+    
+    .scroll-container p {
+        color: white;
+        font-family: 'Poppins';
+        font-size: 14px;
+    }
+    
+    .bubble {
+        margin: auto;
+        width: 20px;
+        height: 20px;
+        border-radius: 100%;
+        box-shadow:
+        inset 0 0 10px #EE8134,
+        inset 10px 0 30px #FCC901,
+        inset -10px 0 30px #0074AF,
+    
+        inset 10px 0 150px #FCC901,
+        inset -10px 0 150px #0074AF,
+    
+        0 0 3px #EE8134,
+        -5px 0 30px #FCC901,
+        5px 0 30px #0074AF
+        ;
+        animation: rotate 2s infinite;
+    }
+    
+    @keyframes rotate {
+        0% {
+            transform: rotate(0);
+            filter: hue-rotate(0);
+        }
+        50% {
+            filter: hue-rotate(100deg);
+        }
+        100% {
+            transform: rotate(360deg);
+        }
+    }
+    
+    main {
+        position: relative;
+        padding: 100px 0 100px;
+        color: #0F384D;
+        background-color: #FFFEFB;
+    }
+    
+    section {
+        display: flex;
+        flex-direction: column;
+        gap: 80px;
+        align-items: center;
+        width: 100%;
+        margin: 0;
+    }
+    
+    p {
+        font-size: 19px;
+        text-align: left;
+        line-height: 30px;
+    }
+    
+    #hbNavbar {
+        font-family: 'Poppins';
+        color: #0F384D;
+        transform: transateY(-400%);
+    }
+    
+    .hb-wrapper {
+        display: flex;
+        gap: 10px;
+        align-items: center;
+    }
+    
+    .stars-wrapper {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 100%;
+        width: 40px;
+        height: 40px;
+        background-color: #0F384D;
+    }
+    
+    #fullNavbar, #hbNavbar {
+        z-index: 10;
+        transition: all .6s cubic-bezier(0,.77,.28,1.02);
+    }
+    
+    .hidden {
+        opacity: 0;
+        transition: all 1s;
+    }
+    
+    .show {
+        opacity: 1;
+    }
+    
+    ::selection {
+        color: #EE8134;
+        background-color: #FCC901;
+    }
+    
+    /* Blob */
+    .blob {
+        height: 1200px;
+        background-color: white;
+        aspect-ratio: 1;
+        border-radius: 50%;
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        translate: -50% -50%;
+        background: linear-gradient(to right, aquamarine, mediumpurple);
+        animation: rotate 4s ease-in-out infinite;
+        /* z-index: -1; */
+      }
+      @keyframes rotate {
+        0%{
+          transform: rotate(0deg);
+        }
+        50%{
+          scale: .8 .8;
+        }
+        100%{
+          transform: rotate(360deg);
+        }
+      }
+      .blob-mask {
+        position: absolute;
+        top: 0;
+        height: 100%;
+        width: 100%;
+        z-index: 2;
+        backdrop-filter:blur(50px) ;
+      }
   }
