--- a/pages/examples-2/header1.css
+++ b/pages/examples-2/header1.css
@@ -395,6 +395,7 @@ p {
         height: 100%;
         width: 100%;
         z-index: 2;
+        -webkit-backdrop-filter: blur(50px);
         backdrop-filter:blur(50px) ;
       }
       .blob-mobile {
