--- a/pages/examples-2/header2.css
+++ b/pages/examples-2/header2.css
@@ -3,6 +3,11 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+html {
+    scroll-behaviour: smooth !important;
+}
+
 body {
     color: white;
     background-color: black;
@@ -17,6 +22,7 @@ nav {
     justify-content: space-between;
     align-items: center;
     width: 100%;
+    height: 140px;
     padding: 0 100px;
 }
 
@@ -53,15 +59,26 @@ ul li:first-child::after {
 
 header {
     position: relative;
-    padding-top: 200px;
+    padding-top: 300px;
     height: 100vh;
+    z-index: 10;
+}
+
+.background-color {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     background: linear-gradient(50.35deg, rgba(8, 52, 46, .7) 30.14%, rgba(9, 167, 149, .7) 77.9%);
+    z-index: -1;
 }
 
 h1 {
     font-family: 'Poppins';
     font-weight: 400;
-    font-size: 100px;
+    font-size: 110px;
+    line-height: 120px;
     text-align: center;
     max-width: 1200px;
     margin: auto;
@@ -70,16 +87,19 @@ h1 {
 .scroll-container {
     position: absolute;
     left: 50%;
-    bottom: 140px;
+    bottom: 70px;
     display: flex;
     gap: 15px;
     flex-direction: column;
-    transform: transateX(-50%);
+    transform: translateX(-50%);
+    text-decoration: none;
+    cursor: pointer;
 }
 
 .scroll-container p {
     color: white;
     font-family: 'Poppins';
+    font-size: 14px;
 }
 
 .bubble {
@@ -88,21 +108,21 @@ h1 {
     height: 20px;
     border-radius: 100%;
     box-shadow:
-    inset 0 0 25px #fff,
-    inset 10px 0 30px #ee82ee,
-    inset -10px 0 30px #0ff,
+    inset 0 0 10px #EE8134,
+    inset 10px 0 30px #FCC901,
+    inset -10px 0 30px #0074AF,
 
-    inset 10px 0 150px #ee82ee,
-    inset -10px 0 150px #0ff,
+    inset 10px 0 150px #FCC901,
+    inset -10px 0 150px #0074AF,
 
-    0 0 3px #fff,
-    -5px 0 30px #ee82ee,
-    5px 0 30px #0ff
+    0 0 3px #EE8134,
+    -5px 0 30px #FCC901,
+    5px 0 30px #0074AF
     ;
     animation: rotate 2s infinite;
 }
 
-/* @keyframes rotate {
+@keyframes rotate {
     0% {
         transform: rotate(0);
         filter: hue-rotate(0);
@@ -113,4 +133,309 @@ h1 {
     100% {
         transform: rotate(360deg);
     }
-} */
+}
+
+main {
+    position: relative;
+    padding: 100px 0 100px;
+    color: #0F384D;
+    background-color: #FFFEFB;
+}
+
+section {
+    display: flex;
+    gap: 80px;
+    align-items: center;
+    width: 980px;
+    margin: 40px auto 0;
+}
+
+p {
+    font-size: 19px;
+    text-align: left;
+    line-height: 30px;
+}
+
+#hbNavbar {
+    font-family: 'Poppins';
+    color: #0F384D;
+    transform: transateY(-400%);
+}
+
+.hb-wrapper {
+    position:relative;
+    z-index: 10;
+    display: flex;
+    gap: 10px;
+    align-items: center;
+    font-family: 'Poppins';
+    font-weight: 700;
+    color: #0F384D;
+}
+
+.stars-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 100%;
+    width: 40px;
+    height: 40px;
+    background-color: #0F384D;
+}
+
+#fullNavbar, #hbNavbar {
+    z-index: 10;
+    transition: all .6s cubic-bezier(0,.77,.28,1.02);
+}
+
+#mobileNavbar {
+    display: none;
+}
+
+.hidden {
+    opacity: 0;
+    transition: all 1s;
+}
+
+.show {
+    opacity: 1;
+}
+
+::selection {
+    color: #EE8134;
+    background-color: #FCC901;
+}
+
+/* Blob */
+.blob {
+    height: 1200px;
+    background-color: white;
+    aspect-ratio: 1;
+    border-radius: 50%;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    translate: -50% -50%;
+    background: linear-gradient(to right, aquamarine, mediumpurple);
+    animation: blob 4s ease-in-out infinite;
+    /* z-index: -1; */
+  }
+  @keyframes blob {
+    0%{
+      transform: rotate(0deg);
+    }
+    50%{
+      scale: .8 .8;
+    }
+    100%{
+      transform: rotate(360deg);
+    }
+  }
+  .blob-mask {
+    position: absolute;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    z-index: 2;
+    backdrop-filter:blur(50px) ;
+  }
+  .blob-mobile {
+    display: none;
+  }
+
+  .moveHb {
+    transition: all .3s ease-in-out;
+    transform: transateX(0%);
+  }
+
+  #appear {
+    position: absolute;
+    top: 0;
+    left: 0;
+    transition: all 1s cubic-bezier(0,.77,.28,1.02);;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    color: #0F384D;
+    background-color: #FFFEFB;
+  }
+
+  @media only screen and (max-width: 1000px) {
+    nav {
+        position: fixed;
+        top: 0;
+        left: 0;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+        height: 140px;
+        padding: 0 100px;
+    }
+    
+    ul {
+        position: fixed;
+        top: 0;
+        left: 0;
+        color: black;
+        background-color: white;
+        width: 100vw;
+        height: 100vh;
+        font-size: 26px;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        transform: translateX(100%);
+        z-index: 10;
+    }
+
+    ul li {
+        opacity: 1;
+    }
+    
+    ul li:first-child::after {
+        display: none;
+    }
+    
+    header {
+        position: relative;
+        padding-top: 300px;
+        height: 100vh;
+        z-index: 10;
+    }
+    
+    .background-color {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(50.35deg, rgba(8, 52, 46, .7) 30.14%, rgba(9, 167, 149, .7) 77.9%);
+        z-index: -1;
+    }
+    
+    h1 {
+        font-size: 30px;
+        line-height: 40px;
+    }
+    
+    .scroll-container {
+        position: absolute;
+        left: 50%;
+        bottom: 70px;
+        display: flex;
+        gap: 15px;
+        flex-direction: column;
+        transform: transateX(-50%);
+        text-decoration: none;
+        cursor: pointer;
+    }
+    
+    .scroll-container p {
+        color: white;
+        font-family: 'Poppins';
+        font-size: 14px;
+    }
+    
+    .bubble {
+        margin: auto;
+        width: 20px;
+        height: 20px;
+        border-radius: 100%;
+        box-shadow:
+        inset 0 0 10px #EE8134,
+        inset 10px 0 30px #FCC901,
+        inset -10px 0 30px #0074AF,
+    
+        inset 10px 0 150px #FCC901,
+        inset -10px 0 150px #0074AF,
+    
+        0 0 3px #EE8134,
+        -5px 0 30px #FCC901,
+        5px 0 30px #0074AF
+        ;
+        animation: rotate 2s infinite;
+    }
+    
+    @keyframes rotate {
+        0% {
+            transform: rotate(0);
+            filter: hue-rotate(0);
+        }
+        50% {
+            filter: hue-rotate(100deg);
+        }
+        100% {
+            transform: rotate(360deg);
+        }
+    }
+    
+    main {
+        padding: 60px 15px;
+    }
+    
+    section {
+        display: flex;
+        flex-direction: column;
+        gap: 50px;
+        align-items: center;
+        width: 100%;
+        margin: 0;
+        margin-top: 16px;
+    }
+
+    section img {
+        width: 100%;
+    }
+    
+    p {
+        font-size: 19px;
+        text-align: left;
+        line-height: 30px;
+    }
+
+    #mobileNavbar {
+        z-index: 100;
+        display: flex;
+        padding: 0 15px;
+        height: 60px;
+    }
+    
+    #fullNavbar, #hbNavbar {
+        display: none;
+    }
+    
+    /* Blob */
+    .blob {
+        display: none;
+      }
+      .blob-mask {
+        position: absolute;
+        top: 0;
+        height: 100%;
+        width: 100%;
+        z-index: 2;
+        -webkit-backdrop-filter: blur(50px);
+        backdrop-filter:blur(50px) ;
+      }
+      .blob-mobile {
+        display: block;
+        background-color: white;
+        aspect-ratio: 1;
+        border-radius: 50%;
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        translate: -50% -65%;
+        background: linear-gradient(to right, aquamarine, mediumpurple);
+        height: 300px;
+        animation: blob 4s ease-in-out infinite;
+      }
+      #hbMenu {
+        transition: all .3s ease-in-out;
+      }
+      .moveHb {
+        transform: translateX(0);
+      }
+  }
